<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.backbase.buildingblocks</groupId>
        <artifactId>backbase-parent</artifactId>
        <version>21.0.1</version>
        <relativePath/>
    </parent>

    <groupId>com.backbase.stream</groupId>
    <artifactId>stream-services</artifactId>
    <version>10.3.0</version>

    <packaging>pom</packaging>
    <name>Stream :: Services</name>

    <modules>
        <module>stream-dbs-clients</module>
        <module>stream-sdk</module>
        <module>stream-models</module>
        <module>stream-product</module>
        <module>stream-investment</module>
        <module>stream-access-control</module>
        <module>stream-transactions</module>
        <module>stream-cursor</module>
        <module>stream-product-catalog</module>
        <module>stream-limits</module>
        <module>stream-legal-entity</module>
        <module>stream-approvals</module>
        <module>stream-payment-order</module>
        <module>stream-portfolio</module>
        <module>stream-contacts</module>
        <module>stream-loans</module>
        <module>stream-audiences</module>
        <module>stream-compositions</module>
        <module>stream-plan-manager</module>
        <module>stream-customer-profile</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <ssdk.version>21.0.1</ssdk.version>
        <backbase-bom.version>2026.03-LTS</backbase-bom.version>
        <boat-maven-plugin.version>0.18.1</boat-maven-plugin.version>
        <backbase.portfolio.version>4.7.0</backbase.portfolio.version>
        <org.jetbrainsannotations.version>26.1.0</org.jetbrainsannotations.version>
        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
        <openapi-generator-maven-plugin.language>spring</openapi-generator-maven-plugin.language>
        <openapi-generator-maven-plugin.library>spring-boot</openapi-generator-maven-plugin.library>
        <codegen.generated-sources-dir>${project.build.directory}/generated-sources</codegen.generated-sources-dir>
        <annotations.generated-sources-dir>${codegen.generated-sources-dir}/annotations</annotations.generated-sources-dir>
        <openapi-generator-maven-plugin.output>${codegen.generated-sources-dir}/openapi</openapi-generator-maven-plugin.output>
        <sonar.organization>backbase</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <japicmp.skip>true</japicmp.skip>
        <maven.test.failure.ignore>true</maven.test.failure.ignore>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.backbase.buildingblocks</groupId>
                <artifactId>backbase-building-blocks-release</artifactId>
                <version>${ssdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${org.jetbrainsannotations.version}</version>
            </dependency>
            <dependency>
                <groupId>com.backbase</groupId>
                <artifactId>portfolio</artifactId>
                <version>${backbase.portfolio.version}</version>
                <classifier>api</classifier>
                <type>zip</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.backbase.oss</groupId>
                    <artifactId>boat-maven-plugin</artifactId>
                    <version>${boat-maven-plugin.version}</version>
                    <configuration>
                        <configOptions>
                            <useSpringBoot4>true</useSpringBoot4>
                            <useJackson3>true</useJackson3>
                            <openApiNullable>false</openApiNullable>
                        </configOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>add-sources</id>
                            <goals>
                                <goal>add-source</goal>
                            </goals>
                            <phase>generate-sources</phase>
                            <configuration>
                                <sources>
                                    <source>${annotations.generated-sources-dir}</source>
                                    <source>${openapi-generator-maven-plugin.output}/src/main/java</source>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Amapstruct.verbose=true</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
